Added basic style for front-end.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
 </head>
 <body>
     <div id="headerrow">
-        <div id="header">
-            <h1>Terry</h1>
-            <h2>A Digital Writer</h2>
-        </div>
+        <h1>Terry</h1>
+        <h2>A Digital Writer</h2>
     </div>
     <!-- Menu -->
-    <div id="sentences">
+    <div class=box id="sentences">
         <div class="button">Generate Sentences</div>
         <div class="container"></div>
     </div>
-    <div id="paragraphs">
+    <div class=box id="paragraphs">
         <div class="button">Generate Paragraphs</div>
         <div class="container"></div>
     </div>
-    <div id="stories">
+    <div class=box id="stories">
         <div class="button">Generate Stories</div>
         <div class="container"></div>
     </div>
