--- a/index.html
+++ b/index.html
@@ -13,25 +13,31 @@
 </head>
 <body>
     <div id="headerrow">
-        <h1>Terry</h1>
-        <h2>A Digital Writer</h2>
+        <h1 class="noselect">Terry</h1>
+        <h2 class="noselect">A Digital Writer</h2>
     </div>
     <!-- Menu -->
-    <div class=box id="sentences">
-        <div class="button">Generate Sentences</div>
+    <div class="box" id="sentences">
+        <div class="button noselect">Generate Sentence</div>
         <div class="container"></div>
     </div>
     <div class=box id="paragraphs">
-        <div class="button">Generate Paragraphs</div>
+        <div class="button noselect">Generate Paragraph</div>
         <div class="container"></div>
     </div>
     <div class=box id="stories">
-        <div class="button">Generate Stories</div>
+        <div class="button noselect">Generate Story</div>
         <div class="container"></div>
     </div>
     <!-- Footer -->
     <div id="footerrow">
-        <a href="https://github.com/ffrankies/Terry">Github Repository</div>
+        <a href="https://github.com/ffrankies/Terry" class="noselect">
+            Github Repository
+        </a>
+        <a href="https://github.com/ffrankies/RNN-Research-Journal"
+            class="noselect">
+            Research Journal
+        </a>
     </div>
 </body>
 </html>
