--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Separate metas from header stuff-->
     <title>Terry</title>
     <link type="text/css" rel="stylesheet" href="style/index.css">
-    <!-- <script src="scripts/index.js"></script>  -->
+    <script src="scripts/generate.js"></script>
 </head>
 <body>
     <div id="headerrow">
@@ -18,15 +18,15 @@
     </div>
     <!-- Menu -->
     <div class="box" id="sentences">
-        <div class="button noselect">Generate Sentence</div>
+        <div class="button noselect">Show Sentence</div>
         <div class="container"></div>
     </div>
     <div class=box id="paragraphs">
-        <div class="button noselect">Generate Paragraph</div>
+        <div class="button noselect">Show Paragraph</div>
         <div class="container"></div>
     </div>
     <div class=box id="stories">
-        <div class="button noselect">Generate Story</div>
+        <div class="button noselect">Show Story</div>
         <div class="container"></div>
     </div>
     <!-- Footer -->
